--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 <body>
     
     <div class="home-background">
-        <div class="login-form">
+        <form class="login-form" action="./profesor.html" method="POST">
             <input type="email" name="email" id="email">
             <input type="password" name="pass" id="pass">
-            <input type="submit" value="Login">
-        </div>
+            <input type="submit" value="Login" id="login">
+        </form>
     </div>
 
     
