--- a/profesor.html
+++ b/profesor.html
@@ -23,7 +23,7 @@
 
     <section class="section-1">
         <div class="container">
-            <h1>Ime i Prezime</h1>
+            <h1 id="imePrezime">Ime i Prezime</h1>
         </div>
     </section>
 
@@ -51,10 +51,10 @@
             </div>
             <div class="row">
                 <div class="col-md-6 izostanci left">
-                    <h4>Opravdani izostanci: <span>10</span></h4>
+                    <h4>Opravdani izostanci: <span></span></h4>
                 </div>
                 <div class="col-md-6 izostanci right">
-                    <h4>Neopravdani izostanci: <span>10</span></h4>
+                    <h4>Neopravdani izostanci: <span></span></h4>
                 </div>
             </div>
             <div class="izostanci ukupno">
@@ -65,68 +65,9 @@
 
     <section class="section-4">
         <div class="container">
-            <div class="naslov">
-                <h3>Predmeti</h3>
-            </div>
-            <div class="predmet">
-                <div class="row">
-                    <div class="col-md-3 cetiri-kolone">
-                        <h4 class="mali-ekran">Naziv</h4>
-                        <h5>Matematika</h5>
-                    </div>
-                    <div class="col-md-5 cetiri-kolone">
-                        <h4 class="mali-ekran">Ocene</h4>
-                        <div class="d-flex ocene">
-                            <p><span>5</span><span>5</span><span>5</span><span>5</span><span>5</span><span>5</span><span>5</span><span>5</span></p>
-                            <img src="media/add-ocena.png" alt="">
-                        </div>
-                    </div>
-                    <div class="col-md-2 cetiri-kolone">
-                        <h4 class="mali-ekran">Prosek</h4>
-                        <h3>3.5</h3>
-                    </div>
-                    <div class="col-md-2 cetiri-kolone">
-                        <h4 class="mali-ekran">Zakljucna ocena</h4>
-                        <h3>4</h3>
-                    </div>
-                </div>
-            </div>
-            <div class="predmet">
-                <div class="row">
-                    <div class="col-md-3 cetiri-kolone">
-                        <h5>Fizicko vaspitanje</h5>
-                    </div>
-                    <div class="col-md-5 cetiri-kolone">
-                        <div class="d-flex ocene">
-                            <p><span>5</span><span>5</span><span>5</span><span>5</span><span>5</span><span>5</span><span>5</span><span>5</span></p>
-                            <img src="media/add-ocena.png" alt="">
-                        </div>
-                    </div>
-                    <div class="col-md-2 cetiri-kolone">
-                        <h3>4.5</h3>
-                    </div>
-                    <div class="col-md-2 cetiri-kolone">
-                        <h3>5</h3>
-                    </div>
-                </div>
-            </div>
-            <div class="predmet">
-                <div class="row">
-                    <div class="col-md-3 cetiri-kolone">
-                        <h5>Geografija</h5>
-                    </div>
-                    <div class="col-md-5 cetiri-kolone">
-                        <div class="d-flex ocene">
-                            <p><span>5</span><span>5</span><span>5</span><span>5</span><span>5</span><span>5</span><span>5</span><span>5</span></p>
-                            <img src="media/add-ocena.png" alt="">
-                        </div>
-                    </div>
-                    <div class="col-md-2 cetiri-kolone">
-                        <h3>4.25</h3>
-                    </div>
-                    <div class="col-md-2 cetiri-kolone">
-                        <h3>4</h3>
-                    </div>
+            <div id="predmeti">
+                <div class="naslov">
+                    <h3>Predmeti</h3>
                 </div>
             </div>
             <div class="predmeti-footer">
@@ -135,7 +76,7 @@
                         <h3>Ukupan prosek:</h3>
                     </div>
                     <div class="col-md-4">
-                        <h2>4.33</h2>
+                        <h2 id="ukupan-prosek"></h2>
                     </div>
                 </div>
             </div>
