--- a/profesor.html
+++ b/profesor.html
@@ -23,13 +23,22 @@
 
     <section class="section-1">
         <div class="container">
-            <h1 id="imePrezime">Ime i Prezime</h1>
+            <h1 id="ime-prezime"></h1>
         </div>
     </section>
 
     <section class="section-2">
         <div class="container okvir">
             <h4>Obavestenja:</h4>
+            <div class="staro-obavestenje">
+                <div class="naslov-obavestenja d-flex">
+                    <h5>Naslov</h5>
+                    <img class="procitaj-obavestenje" src="media/look-down-min.png" alt="">
+                </div>
+                <div class="description-obavestenja">
+                    <p>description-obavestenja</p>
+                </div>
+            </div>
             <div class="dodaj-obavestenje d-flex">
                 <h5>Dodajte novo obavestenje:</h5>
                 <img id="dodaj-obavestenje" src="media/dodaj-obavestenje.png" alt="">
