--- a/profesor.html
+++ b/profesor.html
@@ -28,26 +28,28 @@
     </section>
 
     <section class="section-2">
-        <div class="container okvir">
+        <div class="container">
             <h4>Obavestenja:</h4>
-            <div class="staro-obavestenje">
-                <div class="naslov-obavestenja d-flex">
-                    <h5>Naslov</h5>
-                    <img class="procitaj-obavestenje" src="media/look-down-min.png" alt="">
+            <div class="okvir">
+                <div class="staro-obavestenje">
+                    <div class="naslov-obavestenja d-flex">
+                        <h5>Naslov</h5>
+                        <img class="procitaj-obavestenje" src="media/look-down-min.png" alt="">
+                    </div>
+                    <div class="description-obavestenja">
+                        <p>description-obavestenja</p>
+                    </div>
                 </div>
-                <div class="description-obavestenja">
-                    <p>description-obavestenja</p>
+                <div class="dodaj-obavestenje d-flex">
+                    <h5>Dodajte novo obavestenje:</h5>
+                    <img id="dodaj-obavestenje" src="media/dodaj-obavestenje.png" alt="">
                 </div>
-            </div>
-            <div class="dodaj-obavestenje d-flex">
-                <h5>Dodajte novo obavestenje:</h5>
-                <img id="dodaj-obavestenje" src="media/dodaj-obavestenje.png" alt="">
-            </div>
-            <div class="obavestenje">
-                <input type="text" id="naslov" placeholder="Naslov">
-                <textarea name="description" id="description" cols="30" rows="10"></textarea>
-                <div class="dodaj">
-                    <input id="dodaj-novo-obavestenje" type="button" value="Dodaj">
+                <div class="obavestenje">
+                    <input type="text" id="naslov" placeholder="Naslov">
+                    <textarea name="description" id="description" cols="30" rows="10"></textarea>
+                    <div class="dodaj">
+                        <input id="dodaj-novo-obavestenje" type="button" value="Dodaj">
+                    </div>
                 </div>
             </div>
         </div>
