--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     
     <div class="home-background">
-        <form class="login-form" action="./profesor.html" method="POST">
+        <form class="login-form" method="POST">
             <input type="email" name="email" id="email">
             <input type="password" name="pass" id="pass">
             <input type="submit" value="Login" id="login">
@@ -39,6 +39,12 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
-    <script src="js/main.js"></script>
+    <script src="js/main.js">
+        document.getElementById("login").addEventListener("click", function (evt) {
+            evt.preventDefault();  
+            window.location.replace("./profesor.html");
+            return false;
+        });
+    </script>
 </body>
 </html>
