--- a/profesor.html
+++ b/profesor.html
@@ -15,8 +15,8 @@
     <section class="header">
         <div class="container">
             <div class="d-flex nav">
-                <a class="lista">Ucenici</a>
-                <a class="logout">Logout</a>
+                <a class="lista" href="ucenici.html">Ucenici</a>
+                <a class="logout" href="index.html">Logout</a>
             </div>
         </div>
     </section>
@@ -85,23 +85,7 @@
         </div>
     </section>
 
-    
-    <!-- <script src="https://www.gstatic.com/firebasejs/5.9.2/firebase.js"></script>
-    <script>
-        // Initialize Firebase
-        var config = {
-            apiKey: "AIzaSyD38JwRlFiMxNjMBwDeSIqSRKrszHvixJI",
-            authDomain: "ednevnik-2707.firebaseapp.com",
-            databaseURL: "https://ednevnik-2707.firebaseio.com",
-            projectId: "ednevnik-2707",
-            storageBucket: "ednevnik-2707.appspot.com",
-            messagingSenderId: "796050007748"
-        };
-        firebase.initializeApp(config);
-    </script> -->
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
