--- a/ucenici.html
+++ b/ucenici.html
@@ -12,21 +12,24 @@
 </head>
 <body>
     
-    <div class="home-background">
-        <form class="login-form" method="POST">
-            <input type="text" name="user" id="user" required>
-            <input type="password" name="pass" id="pass" required>
-            <input type="submit" value="Login" id="login">
-            <div id="error">
-                <h3>Niste uneli validan username ili password.<br> Pokušajte ponovo...</h3>
+    <section class="header">
+        <div class="container">
+            <div class="d-flex nav">
+                <a class="logout" href="index.html">Logout</a>
             </div>
-        </form>
-    </div>
+        </div>
+    </section>
+
+    <section class="ucenici-section-1">
+        <div class="container ucenici-lista">
+            <h2>Odeljenje V-1</h2>
+        </div>
+    </section>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
-    <script src="js/login.js"></script>
+    <script src="js/ucenici.js"></script>
 </body>
 </html>
