--- a/profesor.html
+++ b/profesor.html
@@ -14,8 +14,8 @@
     
     <section class="header">
         <div class="container">
-            <div class="d-flex nav">
-                <a class="lista" href="ucenici.html">Ucenici</a>
+            <div class="d-flex nav-bar">
+                <a class="lista" href="ucenici.html">Učenici</a>
                 <a class="logout" href="index.html">Logout</a>
             </div>
         </div>
@@ -29,10 +29,10 @@
 
     <section class="section-2">
         <div class="container">
-            <h4>Obavestenja:</h4>
+            <h4>Obaveštenja:</h4>
             <div class="okvir">
                 <div class="dodaj-obavestenje d-flex">
-                    <h5>Dodajte novo obavestenje:</h5>
+                    <h5>Dodajte novo obaveštenje:</h5>
                     <img id="dodaj-obavestenje" src="media/dodaj-obavestenje.png" alt="">
                 </div>
                 <div class="obavestenje">
