--- a/ucenici.html
+++ b/ucenici.html
@@ -14,7 +14,7 @@
     
     <section class="header">
         <div class="container">
-            <div class="d-flex nav">
+            <div class="d-flex nav-bar">
                 <a class="logout" href="index.html">Logout</a>
             </div>
         </div>
@@ -22,7 +22,7 @@
 
     <section class="ucenici-section-1">
         <div class="container ucenici-lista">
-            <h2>Odeljenje V-1</h2>
+            <h2>Odeljenje IV-1</h2>
         </div>
     </section>
 
