--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
             <input type="text" name="user" id="user" required>
             <input type="password" name="pass" id="pass" required>
             <input type="submit" value="Login" id="login">
-            <div id="error">
-                <h3>Niste uneli validan username ili password.<br> Pokušajte ponovo...</h3>
-            </div>
+            <div id="error"></div>
         </form>
     </div>
 
