--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     
     <div class="home-background">
         <form class="login-form" method="POST">
-            <input type="text" name="user" id="user" required>
-            <input type="password" name="pass" id="pass" required>
+            <input type="text" name="user" id="user" placeholder="korisničko ime" required>
+            <input type="password" name="pass" id="pass" placeholder="šifra" required>
             <input type="submit" value="Login" id="login">
             <div id="error"></div>
         </form>
