--- a/ucenici.html
+++ b/ucenici.html
@@ -21,8 +21,13 @@
     </section>
 
     <section class="ucenici-section-1">
-        <div class="container ucenici-lista">
+        <div class="container">
             <h2>Odeljenje IV-1</h2>
+            <div class="pretraga d-flex">
+                <label for="search">Pronađite <input type="text" placeholder="ime ili prezime" id="search"></label>
+                <input type="button" value="Poređaj A-Z" id="po-redu">
+            </div>
+            <div class="ucenici-lista"></div>
         </div>
     </section>
 
