--- a/profesor.html
+++ b/profesor.html
@@ -48,15 +48,29 @@
 
     <section class="section-3">
         <div class="container">
-            <div class="izostanci naslov">
+            <div class="izostanci-naslov">
                 <h3>IZOSTANCI</h3>
             </div>
             <div class="row">
                 <div class="col-md-6 izostanci left">
-                    <h4>Opravdani izostanci: <span></span></h4>
+                    <div class="opravdani d-flex">
+                        <h4>Opravdani izostanci: <span></span></h4>
+                        <div class="dodavanje-ocene">
+                            <input class="novi-izostanci" type="number" />
+                            <input class="izostanci-dodati" type="button" value="OK" />
+                        </div>
+                        <img class="otvori-dodavanje" src="media/add-ocena.png" alt="">
+                    </div>
                 </div>
                 <div class="col-md-6 izostanci right">
-                    <h4>Neopravdani izostanci: <span></span></h4>
+                    <div class="neopravdani d-flex">
+                        <h4>Neopravdani izostanci: <span></span></h4>
+                        <div class="dodavanje-ocene">
+                            <input class="novi-izostanci" type="number" />
+                            <input class="izostanci-dodati" type="button" value="OK" />
+                        </div>
+                        <img class="otvori-dodavanje" src="media/add-ocena.png" alt="">
+                    </div>
                 </div>
             </div>
             <div class="izostanci ukupno">
