--- a/ucenici.html
+++ b/ucenici.html
@@ -12,24 +12,31 @@
 </head>
 <body>
     
-    <section class="header">
+    <header class="header">
         <div class="container">
             <div class="d-flex nav-bar">
                 <a class="logout" href="index.html">Logout</a>
             </div>
         </div>
-    </section>
+    </header>
 
     <section class="ucenici-section-1">
         <div class="container">
             <h2>Odeljenje IV-1</h2>
             <div class="pretraga d-flex">
-                <label for="search">Pronađite <input type="text" placeholder="ime ili prezime" id="search"></label>
+                <div>
+                    <label for="search">Pronađite</label><input type="text" placeholder="ime ili prezime" id="search">
+                </div>
                 <input type="button" value="Poređaj A-Z" id="po-redu">
             </div>
             <div class="ucenici-lista"></div>
         </div>
     </section>
+
+    <footer class="d-flex">
+        <h4>&#169; by BB90</h4>
+        <div><a href="https://github.com/b-b90/"><img src="media/github-50.png" alt="github"></a><a href="https://www.linkedin.com/in/bojan-brkic/"><img src="media/linkedin-50.png" alt="linkedin"></a></div>
+    </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
