--- a/profesor.html
+++ b/profesor.html
@@ -51,51 +51,71 @@
     
         <section class="section-3">
             <div class="container">
-                <div class="izostanci-naslov">
-                    <h3>IZOSTANCI</h3>
-                </div>
-                <div class="row">
-                    <div class="col-md-6 izostanci left">
-                        <div class="opravdani d-flex">
-                            <h4>Opravdani izostanci: <span></span></h4>
-                            <div class="dodavanje-ocene">
-                                <input class="novi-izostanci" type="number" />
-                                <input class="izostanci-dodati" type="button" value="OK" />
+                <div class="svi-izostanci">
+                    <div class="izostanci-naslov">
+                        <h3>IZOSTANCI</h3>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6 izostanci left">
+                            <div class="opravdani d-flex">
+                                <h4>Opravdani izostanci: <span></span></h4>
+                                <div class="dodavanje-ocene">
+                                    <input class="novi-izostanci" type="number" />
+                                    <input class="izostanci-dodati" type="button" value="OK" />
+                                </div>
+                                <img class="otvori-dodavanje" src="media/add-ocena.png" alt="">
                             </div>
-                            <img class="otvori-dodavanje" src="media/add-ocena.png" alt="">
+                        </div>
+                        <div class="col-md-6 izostanci right">
+                            <div class="neopravdani d-flex">
+                                <h4>Neopravdani izostanci: <span></span></h4>
+                                <div class="dodavanje-ocene">
+                                    <input class="novi-izostanci" type="number" />
+                                    <input class="izostanci-dodati" type="button" value="OK" />
+                                </div>
+                                <img class="otvori-dodavanje" src="media/add-ocena.png" alt="">
+                            </div>
                         </div>
                     </div>
-                    <div class="col-md-6 izostanci right">
-                        <div class="neopravdani d-flex">
-                            <h4>Neopravdani izostanci: <span></span></h4>
-                            <div class="dodavanje-ocene">
-                                <input class="novi-izostanci" type="number" />
-                                <input class="izostanci-dodati" type="button" value="OK" />
-                            </div>
-                            <img class="otvori-dodavanje" src="media/add-ocena.png" alt="">
-                        </div>
+                    <div class="izostanci ukupno">
+                        <h3>Ukupni izostanci: <span></span></h3>
                     </div>
-                </div>
-                <div class="izostanci ukupno">
-                    <h3>Ukupni izostanci: <span></span></h3>
                 </div>
             </div>
         </section>
     
         <section class="section-4">
             <div class="container">
-                <div id="predmeti">
-                    <div class="naslov">
-                        <h3>Predmeti</h3>
-                    </div>
-                </div>
-                <div class="predmeti-footer">
-                    <div class="row">
-                        <div class="col-md-8">
-                            <h3>Ukupan prosek:</h3>
+                <div class="svi-predmeti">
+                    <div id="predmeti">
+                        <div class="naslov">
+                            <h3>Predmeti</h3>
                         </div>
-                        <div class="col-md-4">
-                            <h2 id="ukupan-prosek"></h2>
+                        <div class="predmet-header">
+                            <div class="row">
+                                <div class="col-md-3 cetiri-kolone">
+                                    <h4 class="mali-ekran">Naziv</h4>
+                                </div>
+                                <div class="col-md-5 cetiri-kolone">
+                                    <h4 class="mali-ekran">Ocene</h4>
+                                </div>
+                                <div class="col-md-2 cetiri-kolone">
+                                    <h4 class="mali-ekran">Prosek</h4>
+                                </div>
+                                <div class="col-md-2 cetiri-kolone">
+                                    <h4 class="mali-ekran">Zaključna ocena</h4>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="predmeti-footer">
+                        <div class="row">
+                            <div class="col-md-8">
+                                <h3>Ukupan prosek:</h3>
+                            </div>
+                            <div class="col-md-4">
+                                <h2 id="ukupan-prosek"></h2>
+                            </div>
                         </div>
                     </div>
                 </div>
