--- a/profesor.html
+++ b/profesor.html
@@ -56,7 +56,7 @@
                         <h3>IZOSTANCI</h3>
                     </div>
                     <div class="row">
-                        <div class="col-md-6 izostanci left">
+                        <div class="col-lg-6 izostanci left">
                             <div class="opravdani d-flex">
                                 <h4>Opravdani izostanci: <span></span></h4>
                                 <div class="dodavanje-ocene">
@@ -66,7 +66,7 @@
                                 <img class="otvori-dodavanje" src="media/add-ocena.png" alt="">
                             </div>
                         </div>
-                        <div class="col-md-6 izostanci right">
+                        <div class="col-lg-6 izostanci right">
                             <div class="neopravdani d-flex">
                                 <h4>Neopravdani izostanci: <span></span></h4>
                                 <div class="dodavanje-ocene">
@@ -93,16 +93,16 @@
                         </div>
                         <div class="predmet-header">
                             <div class="row">
-                                <div class="col-md-3 cetiri-kolone">
+                                <div class="col-lg-3 cetiri-kolone">
                                     <h4 class="mali-ekran">Naziv</h4>
                                 </div>
-                                <div class="col-md-5 cetiri-kolone">
+                                <div class="col-lg-5 cetiri-kolone">
                                     <h4 class="mali-ekran">Ocene</h4>
                                 </div>
-                                <div class="col-md-2 cetiri-kolone">
+                                <div class="col-lg-2 cetiri-kolone">
                                     <h4 class="mali-ekran">Prosek</h4>
                                 </div>
-                                <div class="col-md-2 cetiri-kolone">
+                                <div class="col-lg-2 cetiri-kolone">
                                     <h4 class="mali-ekran">Zaključna ocena</h4>
                                 </div>
                             </div>
@@ -110,10 +110,10 @@
                     </div>
                     <div class="predmeti-footer">
                         <div class="row">
-                            <div class="col-md-8">
+                            <div class="col-lg-8">
                                 <h3>Ukupan prosek:</h3>
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-lg-4">
                                 <h2 id="ukupan-prosek"></h2>
                             </div>
                         </div>
