--- a/profesor.html
+++ b/profesor.html
@@ -124,6 +124,11 @@
         </section>
     </div>
 
+    <footer class="d-flex">
+        <h4>&#169; by BB90</h4>
+        <div><a href="https://github.com/b-b90/"><img src="media/github-50.png" alt="github"></a><a href="https://www.linkedin.com/in/bojan-brkic/"><img src="media/linkedin-50.png" alt="linkedin"></a></div>
+    </footer>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
