--- a/profesor.html
+++ b/profesor.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="sr">
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,19 +13,19 @@
 </head>
 <body>
     
-    <section class="header">
+    <div class="header">
         <div class="container">
             <div class="d-flex nav-bar">
                 <a class="lista" href="ucenici.html">Učenici</a>
                 <a class="logout" href="index.html">Logout</a>
             </div>
         </div>
-    </section>
+    </div>
 
     <div class="for-background">
         <section class="section-1">
             <div class="container">
-                <h1 id="ime-prezime"></h1>
+                <h1 id="ime-prezime">BB</h1>
             </div>
         </section>
     
@@ -79,7 +79,7 @@
                         </div>
                     </div>
                     <div class="izostanci ukupno">
-                        <h3>Ukupni izostanci: <span></span></h3>
+                        <h3>Ukupni izostanci: <span>0</span></h3>
                     </div>
                 </div>
             </div>
