--- a/profesor.html
+++ b/profesor.html
@@ -115,7 +115,7 @@
                                 <h3>Ukupan prosek:</h3>
                             </div>
                             <div class="col-lg-4">
-                                <h2 id="ukupan-prosek"></h2>
+                                <h2 id="ukupan-prosek">0</h2>
                             </div>
                         </div>
                     </div>
